parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_DEFAULT
    KEYWORD_PUBLIC

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> <empty>
Rule 4     statement -> KEYWORD_SECRET ID ASSIGN expression SEMI
Rule 5     statement -> ID ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
Rule 6     statement -> KEYWORD_SEND LPAREN ID RPAREN SEMI
Rule 7     statement -> ID ASSIGN expression SEMI
Rule 8     statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI
Rule 9     statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI
Rule 10    if_head -> KEYWORD_IF LPAREN expression RPAREN
Rule 11    statement -> if_head LBRACE statements RBRACE
Rule 12    statement -> if_head LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
Rule 13    else_marker -> KEYWORD_ELSE
Rule 14    statement -> if_head LBRACE statements RBRACE else_marker LBRACE statements RBRACE
Rule 15    switch_head -> KEYWORD_SWITCH LPAREN expression RPAREN
Rule 16    statement -> switch_head LBRACE cases RBRACE
Rule 17    cases -> cases case
Rule 18    cases -> empty
Rule 19    case_head -> KEYWORD_CASE NUMBER COLON
Rule 20    case -> case_head statements KEYWORD_BREAK SEMI
Rule 21    empty -> <empty>
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> NUMBER
Rule 27    expression -> ID

Terminals, with rules where they appear

ASSIGN               : 4 5 7
COLON                : 19
GT                   : 24
ID                   : 4 5 5 6 7 27
KEYWORD_ADMIN        : 8
KEYWORD_AS           : 8 9
KEYWORD_BREAK        : 20
KEYWORD_CASE         : 19
KEYWORD_DEFAULT      : 
KEYWORD_ELSE         : 12 13
KEYWORD_ENCRYPT      : 5
KEYWORD_GUEST        : 9
KEYWORD_IF           : 10
KEYWORD_LOGIN        : 8 9
KEYWORD_PUBLIC       : 
KEYWORD_SECRET       : 4
KEYWORD_SEND         : 6
KEYWORD_SWITCH       : 15
LBRACE               : 11 12 12 14 14 16
LPAREN               : 5 6 10 15
LT                   : 25
MINUS                : 23
NUMBER               : 19 26
PLUS                 : 22
RBRACE               : 11 12 12 14 14 16
RPAREN               : 5 6 10 15
SEMI                 : 4 5 6 7 8 9 20
error                : 

Nonterminals, with rules where they appear

case                 : 17
case_head            : 20
cases                : 16 17
else_marker          : 14
empty                : 18
expression           : 4 7 10 15 22 22 23 23 24 24 25 25
if_head              : 11 12 14
program              : 0
statement            : 2
statements           : 1 2 11 12 12 14 14 20
switch_head          : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> .
    (4) statement -> . KEYWORD_SECRET ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (6) statement -> . KEYWORD_SEND LPAREN ID RPAREN SEMI
    (7) statement -> . ID ASSIGN expression SEMI
    (8) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI
    (9) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI
    (11) statement -> . if_head LBRACE statements RBRACE
    (12) statement -> . if_head LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> . if_head LBRACE statements RBRACE else_marker LBRACE statements RBRACE
    (16) statement -> . switch_head LBRACE cases RBRACE
    (10) if_head -> . KEYWORD_IF LPAREN expression RPAREN
    (15) switch_head -> . KEYWORD_SWITCH LPAREN expression RPAREN

    $end            reduce using rule 3 (statements -> .)
    KEYWORD_SECRET  shift and go to state 4
    ID              shift and go to state 5
    KEYWORD_SEND    shift and go to state 6
    KEYWORD_LOGIN   shift and go to state 7
    KEYWORD_IF      shift and go to state 10
    KEYWORD_SWITCH  shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    if_head                        shift and go to state 8
    switch_head                    shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (2) statements -> . statement statements
    (3) statements -> .
    (4) statement -> . KEYWORD_SECRET ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (6) statement -> . KEYWORD_SEND LPAREN ID RPAREN SEMI
    (7) statement -> . ID ASSIGN expression SEMI
    (8) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI
    (9) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI
    (11) statement -> . if_head LBRACE statements RBRACE
    (12) statement -> . if_head LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> . if_head LBRACE statements RBRACE else_marker LBRACE statements RBRACE
    (16) statement -> . switch_head LBRACE cases RBRACE
    (10) if_head -> . KEYWORD_IF LPAREN expression RPAREN
    (15) switch_head -> . KEYWORD_SWITCH LPAREN expression RPAREN

    $end            reduce using rule 3 (statements -> .)
    RBRACE          reduce using rule 3 (statements -> .)
    KEYWORD_BREAK   reduce using rule 3 (statements -> .)
    KEYWORD_SECRET  shift and go to state 4
    ID              shift and go to state 5
    KEYWORD_SEND    shift and go to state 6
    KEYWORD_LOGIN   shift and go to state 7
    KEYWORD_IF      shift and go to state 10
    KEYWORD_SWITCH  shift and go to state 11

    statement                      shift and go to state 3
    statements                     shift and go to state 12
    if_head                        shift and go to state 8
    switch_head                    shift and go to state 9

state 4

    (4) statement -> KEYWORD_SECRET . ID ASSIGN expression SEMI

    ID              shift and go to state 13


state 5

    (5) statement -> ID . ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (7) statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 14


state 6

    (6) statement -> KEYWORD_SEND . LPAREN ID RPAREN SEMI

    LPAREN          shift and go to state 15


state 7

    (8) statement -> KEYWORD_LOGIN . KEYWORD_AS KEYWORD_ADMIN SEMI
    (9) statement -> KEYWORD_LOGIN . KEYWORD_AS KEYWORD_GUEST SEMI

    KEYWORD_AS      shift and go to state 16


state 8

    (11) statement -> if_head . LBRACE statements RBRACE
    (12) statement -> if_head . LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> if_head . LBRACE statements RBRACE else_marker LBRACE statements RBRACE

    LBRACE          shift and go to state 17


state 9

    (16) statement -> switch_head . LBRACE cases RBRACE

    LBRACE          shift and go to state 18


state 10

    (10) if_head -> KEYWORD_IF . LPAREN expression RPAREN

    LPAREN          shift and go to state 19


state 11

    (15) switch_head -> KEYWORD_SWITCH . LPAREN expression RPAREN

    LPAREN          shift and go to state 20


state 12

    (2) statements -> statement statements .

    $end            reduce using rule 2 (statements -> statement statements .)
    RBRACE          reduce using rule 2 (statements -> statement statements .)
    KEYWORD_BREAK   reduce using rule 2 (statements -> statement statements .)


state 13

    (4) statement -> KEYWORD_SECRET ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 21


state 14

    (5) statement -> ID ASSIGN . KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (7) statement -> ID ASSIGN . expression SEMI
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    KEYWORD_ENCRYPT shift and go to state 23
    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 24

state 15

    (6) statement -> KEYWORD_SEND LPAREN . ID RPAREN SEMI

    ID              shift and go to state 26


state 16

    (8) statement -> KEYWORD_LOGIN KEYWORD_AS . KEYWORD_ADMIN SEMI
    (9) statement -> KEYWORD_LOGIN KEYWORD_AS . KEYWORD_GUEST SEMI

    KEYWORD_ADMIN   shift and go to state 27
    KEYWORD_GUEST   shift and go to state 28


state 17

    (11) statement -> if_head LBRACE . statements RBRACE
    (12) statement -> if_head LBRACE . statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> if_head LBRACE . statements RBRACE else_marker LBRACE statements RBRACE
    (2) statements -> . statement statements
    (3) statements -> .
    (4) statement -> . KEYWORD_SECRET ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (6) statement -> . KEYWORD_SEND LPAREN ID RPAREN SEMI
    (7) statement -> . ID ASSIGN expression SEMI
    (8) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI
    (9) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI
    (11) statement -> . if_head LBRACE statements RBRACE
    (12) statement -> . if_head LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> . if_head LBRACE statements RBRACE else_marker LBRACE statements RBRACE
    (16) statement -> . switch_head LBRACE cases RBRACE
    (10) if_head -> . KEYWORD_IF LPAREN expression RPAREN
    (15) switch_head -> . KEYWORD_SWITCH LPAREN expression RPAREN

    RBRACE          reduce using rule 3 (statements -> .)
    KEYWORD_SECRET  shift and go to state 4
    ID              shift and go to state 5
    KEYWORD_SEND    shift and go to state 6
    KEYWORD_LOGIN   shift and go to state 7
    KEYWORD_IF      shift and go to state 10
    KEYWORD_SWITCH  shift and go to state 11

    if_head                        shift and go to state 8
    statements                     shift and go to state 29
    statement                      shift and go to state 3
    switch_head                    shift and go to state 9

state 18

    (16) statement -> switch_head LBRACE . cases RBRACE
    (17) cases -> . cases case
    (18) cases -> . empty
    (21) empty -> .

    RBRACE          reduce using rule 21 (empty -> .)
    KEYWORD_CASE    reduce using rule 21 (empty -> .)

    cases                          shift and go to state 30
    empty                          shift and go to state 31

state 19

    (10) if_head -> KEYWORD_IF LPAREN . expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 32

state 20

    (15) switch_head -> KEYWORD_SWITCH LPAREN . expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 33

state 21

    (4) statement -> KEYWORD_SECRET ID ASSIGN . expression SEMI
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 34

state 22

    (27) expression -> ID .

    SEMI            reduce using rule 27 (expression -> ID .)
    PLUS            reduce using rule 27 (expression -> ID .)
    MINUS           reduce using rule 27 (expression -> ID .)
    GT              reduce using rule 27 (expression -> ID .)
    LT              reduce using rule 27 (expression -> ID .)
    RPAREN          reduce using rule 27 (expression -> ID .)


state 23

    (5) statement -> ID ASSIGN KEYWORD_ENCRYPT . LPAREN ID RPAREN SEMI

    LPAREN          shift and go to state 35


state 24

    (7) statement -> ID ASSIGN expression . SEMI
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression

    SEMI            shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40


state 25

    (26) expression -> NUMBER .

    SEMI            reduce using rule 26 (expression -> NUMBER .)
    PLUS            reduce using rule 26 (expression -> NUMBER .)
    MINUS           reduce using rule 26 (expression -> NUMBER .)
    GT              reduce using rule 26 (expression -> NUMBER .)
    LT              reduce using rule 26 (expression -> NUMBER .)
    RPAREN          reduce using rule 26 (expression -> NUMBER .)


state 26

    (6) statement -> KEYWORD_SEND LPAREN ID . RPAREN SEMI

    RPAREN          shift and go to state 41


state 27

    (8) statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN . SEMI

    SEMI            shift and go to state 42


state 28

    (9) statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST . SEMI

    SEMI            shift and go to state 43


state 29

    (11) statement -> if_head LBRACE statements . RBRACE
    (12) statement -> if_head LBRACE statements . RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> if_head LBRACE statements . RBRACE else_marker LBRACE statements RBRACE

    RBRACE          shift and go to state 44


state 30

    (16) statement -> switch_head LBRACE cases . RBRACE
    (17) cases -> cases . case
    (20) case -> . case_head statements KEYWORD_BREAK SEMI
    (19) case_head -> . KEYWORD_CASE NUMBER COLON

    RBRACE          shift and go to state 45
    KEYWORD_CASE    shift and go to state 48

    case                           shift and go to state 46
    case_head                      shift and go to state 47

state 31

    (18) cases -> empty .

    RBRACE          reduce using rule 18 (cases -> empty .)
    KEYWORD_CASE    reduce using rule 18 (cases -> empty .)


state 32

    (10) if_head -> KEYWORD_IF LPAREN expression . RPAREN
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression

    RPAREN          shift and go to state 49
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40


state 33

    (15) switch_head -> KEYWORD_SWITCH LPAREN expression . RPAREN
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression

    RPAREN          shift and go to state 50
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40


state 34

    (4) statement -> KEYWORD_SECRET ID ASSIGN expression . SEMI
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression

    SEMI            shift and go to state 51
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40


state 35

    (5) statement -> ID ASSIGN KEYWORD_ENCRYPT LPAREN . ID RPAREN SEMI

    ID              shift and go to state 52


state 36

    (7) statement -> ID ASSIGN expression SEMI .

    KEYWORD_SECRET  reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    ID              reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    KEYWORD_SEND    reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    KEYWORD_LOGIN   reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    KEYWORD_IF      reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    KEYWORD_SWITCH  reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    $end            reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    RBRACE          reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)
    KEYWORD_BREAK   reduce using rule 7 (statement -> ID ASSIGN expression SEMI .)


state 37

    (22) expression -> expression PLUS . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 53

state 38

    (23) expression -> expression MINUS . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 54

state 39

    (24) expression -> expression GT . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 55

state 40

    (25) expression -> expression LT . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . NUMBER
    (27) expression -> . ID

    NUMBER          shift and go to state 25
    ID              shift and go to state 22

    expression                     shift and go to state 56

state 41

    (6) statement -> KEYWORD_SEND LPAREN ID RPAREN . SEMI

    SEMI            shift and go to state 57


state 42

    (8) statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .

    KEYWORD_SECRET  reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    ID              reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    KEYWORD_SEND    reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    KEYWORD_LOGIN   reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    KEYWORD_IF      reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    KEYWORD_SWITCH  reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    $end            reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    RBRACE          reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)
    KEYWORD_BREAK   reduce using rule 8 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI .)


state 43

    (9) statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .

    KEYWORD_SECRET  reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    ID              reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    KEYWORD_SEND    reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    KEYWORD_LOGIN   reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    KEYWORD_IF      reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    KEYWORD_SWITCH  reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    $end            reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    RBRACE          reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)
    KEYWORD_BREAK   reduce using rule 9 (statement -> KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI .)


state 44

    (11) statement -> if_head LBRACE statements RBRACE .
    (12) statement -> if_head LBRACE statements RBRACE . KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> if_head LBRACE statements RBRACE . else_marker LBRACE statements RBRACE
    (13) else_marker -> . KEYWORD_ELSE

    KEYWORD_SECRET  reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    ID              reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_SEND    reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_LOGIN   reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_IF      reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_SWITCH  reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    $end            reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    RBRACE          reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_BREAK   reduce using rule 11 (statement -> if_head LBRACE statements RBRACE .)
    KEYWORD_ELSE    shift and go to state 58

    else_marker                    shift and go to state 59

state 45

    (16) statement -> switch_head LBRACE cases RBRACE .

    KEYWORD_SECRET  reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    ID              reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    KEYWORD_SEND    reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    KEYWORD_LOGIN   reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    KEYWORD_IF      reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    KEYWORD_SWITCH  reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    $end            reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    RBRACE          reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)
    KEYWORD_BREAK   reduce using rule 16 (statement -> switch_head LBRACE cases RBRACE .)


state 46

    (17) cases -> cases case .

    RBRACE          reduce using rule 17 (cases -> cases case .)
    KEYWORD_CASE    reduce using rule 17 (cases -> cases case .)


state 47

    (20) case -> case_head . statements KEYWORD_BREAK SEMI
    (2) statements -> . statement statements
    (3) statements -> .
    (4) statement -> . KEYWORD_SECRET ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN KEYWORD_ENCRYPT LPAREN ID RPAREN SEMI
    (6) statement -> . KEYWORD_SEND LPAREN ID RPAREN SEMI
    (7) statement -> . ID ASSIGN expression SEMI
    (8) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_ADMIN SEMI
    (9) statement -> . KEYWORD_LOGIN KEYWORD_AS KEYWORD_GUEST SEMI
    (11) statement -> . if_head LBRACE statements RBRACE
    (12) statement -> . if_head LBRACE statements RBRACE KEYWORD_ELSE LBRACE statements RBRACE
    (14) statement -> . if_head LBRACE statements RBRACE else_marker LBRACE statements RBRACE
    (16) statement -> . switch_head LBRACE cases RBRACE
    (10) if_head -> . KEYWORD_IF LPAREN expression RPAREN
    (15) switch_head -> . KEYWORD_SWITCH LPAREN expression RPAREN

    KEYWORD_BREAK   reduce using rule 3 (statements -> .)
    KEYWORD_SECRET  shift and go to state 4
    ID              shift and go to state 5
    KEYWORD_SEND    shift and go to state 6
    KEYWORD_LOGIN   shift and go to state 7
    KEYWORD_IF      shift and go to state 10
    KEYWORD_SWITCH  shift and go to state 11

    statements                     shift and go to state 60
    statement                      shift and go to state 3
    if_head                        shift and go to state 8
    switch_head                    shift and go to state 9

state 48

    (19) case_head -> KEYWORD_CASE . NUMBER COLON

    NUMBER          shift and go to state 61


state 49

    (10) if_head -> KEYWORD_IF LPAREN expression RPAREN .

    LBRACE          reduce using rule 10 (if_head -> KEYWORD_IF LPAREN expression RPAREN .)


state 50

    (15) switch_head -> KEYWORD_SWITCH LPAREN expression RPAREN .

    LBRACE          reduce using rule 15 (switch_head -> KEYWORD_SWITCH LPAREN expression RPAREN .)


state 51

    (4) statement -> KEYWORD_SECRET ID ASSIGN expression SEMI .
